# ensoul

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
docs/: landing-en.md  landing-zh.md
src/ensoul/: __init__.py  auth.py  classification.py  config_store.py  context_compactor.py  context_detector.py  context_layers.py  cost.py  cron_config.py  cron_evaluate.py  cron_extract_memories.py  cron_scheduler.py  database.py  discovery.py  discussion_ingest.py  embedding.py  engine.py  engine_chat.py  engine_prompt.py  evaluation.py  event_collector.py  exceptions.py  executor.py  lanes.py  log.py  meeting_log.py  memory.py  memory_cache.py  memory_consolidate.py  memory_constants.py  memory_index.py  memory_pipeline.py  memory_semantic.py  memory_store_db.py  memory_tags.py  metrics.py  model_router.py  observation_compressor.py  organization.py  output_sanitizer.py  (+25 more)
